feat: выбор цвета фона списка, лоадер при сохранении изменений списка;
